--- a/finchcollector/main_app/templates/base.html
+++ b/finchcollector/main_app/templates/base.html
@@ -5,20 +5,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Finch Collector</title>
+    <title>Cat Collector</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <link rel="stylesheet"  href="{% static 'css/style.css' %}" >
+    <link rel="stylesheet"  href="{% static 'css/style.css' %}">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 <body>
+
     <header class="navbar-fixed">
         <nav>
-            <div class="nav-wrapper black">
+            <div class="nav-wrapper #004d40 teal darken-4">
                 <ul>
-                    <li><a href="/" class="left brand-logo"> &nbsp; &nbsp;Finch Collector</a></li>
+                    <li><a href="{% url 'home' %}" class="left brand-logo"> &nbsp; &nbsp;Finch Collector</a></li>
                 </ul>
                 <ul class="right">
-                    <li><a href="/about">About</a></li>
-                    <li><a href="/finches">View All My Finchs</a></li>
+            
+                    {%if user.is_authenticated %}
+                  <li> welcome, {{user.username}}</li>
+                    <li><a href="{% url 'about' %}">About</a></li>
+                    <li><a href="{% url 'index' %}">View All My Finches</a></li>
+                    <li><a href="{% url 'finches_create' %}"> Add Finch</a></li>
+                    <li><a href="{% url 'toys_create' %}"> Add a Toy</a></li>
+                    <li><a href="{% url 'toys_index' %}"> View All Toys</a></li>
+                    <li><a href="{% url 'logout' %}"> Log out</a></li>
+                  
+                    {%else%}
+                    <li><a href="{% url 'about' %}">About</a></li>
+                    <li><a href="{% url 'login' %}"> Log In</a></li>
+                    <li><a href="{% url 'signup' %}"> Signup</a></li>
+                    {% endif %}
                 </ul>
             </div>
         </nav>
@@ -27,8 +42,8 @@
         {% block content %}
         {% endblock %}
     </main>
-    <footer class="page-footer black">
-        <div class="center">All Rights Reserved, &copy; 2023 Finch Collector &nbsp;</div>
+    <footer class="page-footer #004d40 teal darken-4">
+        <div class="center">All Rights Reserved, &copy; 2023 Cat Collector &nbsp;</div>
     </footer>
     
 </body>
